# backend/routes/adminUserRoutes.js
@@ -5,6 +5,5 @@ const adminController = require("../controllers/adminController");
 
 router.get("/users", authMiddleware, adminController.getAdminUsers);
 router.put("/users/:id/status", authMiddleware, adminController.updateUserStatus);
-router.delete("/users/:id", authMiddleware, adminController.deleteUser);
 
 module.exports = router;
